--- a/src/main/resources/templates/asiento-form.html
+++ b/src/main/resources/templates/asiento-form.html
@@ -3,6 +3,7 @@
 <head>
     <title>Registrar Asiento</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="/css/navbar-style.css" rel="stylesheet">
 </head>
 <body>
 <div th:replace="~{fragments/navbar :: navbarFragment}"></div>
