--- a/src/main/resources/templates/cuentas.html
+++ b/src/main/resources/templates/cuentas.html
@@ -3,6 +3,7 @@
 <head>
     <title>Plan de Cuentas</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="/css/navbar-style.css" rel="stylesheet">
     <style>
         .tree-row { 
             background-color: #fff;
