--- a/src/main/resources/templates/factura-exito.html
+++ b/src/main/resources/templates/factura-exito.html
@@ -3,6 +3,7 @@
 <head>
     <title>Factura Creada Exitosamente</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="/css/navbar-style.css" rel="stylesheet">
     <style>
         .success-container {
             max-width: 900px;
