--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -3,6 +3,7 @@
 <head>
     <title>Home - Sistema Contable</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="/css/navbar-style.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.0/font/bootstrap-icons.css" rel="stylesheet">
     <style>
         .navbar {
