--- a/src/main/resources/templates/libro-diario-report.html
+++ b/src/main/resources/templates/libro-diario-report.html
@@ -3,6 +3,7 @@
 <head>
     <title>Reporte - Libro Diario</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"/>
+    <link href="/css/navbar-style.css" rel="stylesheet">
     <style>
         .asiento-block {
             border: 1px solid #ccc;
