--- a/src/main/resources/templates/solicitud-compra-detalle.html
+++ b/src/main/resources/templates/solicitud-compra-detalle.html
@@ -3,6 +3,7 @@
 <head>
     <title>Detalle de la Solicitud de Compra</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="/css/navbar-style.css" rel="stylesheet">
     <style>
         .stepper-wrapper {
             display: flex;
