--- a/src/main/resources/templates/solicitud-compra-listado.html
+++ b/src/main/resources/templates/solicitud-compra-listado.html
@@ -3,6 +3,7 @@
 <head>
     <title>Listado de Solicitudes de Compras</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="/css/navbar-style.css" rel="stylesheet">
     <style>
         .observaciones-cell {
             text-align: center;
