--- a/src/main/resources/templates/almacenes-listado.html
+++ b/src/main/resources/templates/almacenes-listado.html
@@ -10,6 +10,8 @@
 <div class="container mt-4">
     <h2>Almacenes</h2>
     <a th:href="@{/almacenes/nuevo}" class="btn btn-primary mb-3">+ Nuevo Almacén</a>
+
+    <a th:href="@{/productos}" class="btn btn-secondary mb-3">Volver al Inicio</a>
     
     <table class="table table-striped">
         <thead>
