--- a/src/main/resources/templates/categorias-listado.html
+++ b/src/main/resources/templates/categorias-listado.html
@@ -10,6 +10,8 @@
 <div class="container mt-4">
     <h2>Categorías de Productos</h2>
     <a th:href="@{/categorias/nuevo}" class="btn btn-primary mb-3">+ Nueva Categoría</a>
+
+    <a th:href="@{/productos}" class="btn btn-secondary mb-3">Volver al Inicio</a>
     
     <table class="table table-striped">
         <thead>
