--- a/src/main/resources/templates/producto-form.html
+++ b/src/main/resources/templates/producto-form.html
@@ -60,6 +60,10 @@
 
         <h4 class="mt-4">Otros</h4>
         <hr>
+        <div class="col-md-4 mb-3">
+            <label for="precioCosto" class="form-label">Precio de Costo</label>
+            <input type="number" step="0.01" class="form-control" id="precioCosto" th:field="*{precioCosto}" min="0">
+        </div>
         <div class="row">
             <div class="col-md-4 mb-3">
                 <label for="precioVenta" class="form-label">Precio de Venta</label>
