--- a/src/main/resources/templates/producto-form.html
+++ b/src/main/resources/templates/producto-form.html
@@ -4,6 +4,7 @@
     <title>Alta de Producto</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="/css/navbar-style.css" rel="stylesheet">
+    <script src="http://localhost:35729/livereload.js"></script>
 </head>
 <body>
 <div th:replace="~{fragments/navbar :: navbarFragment}"></div>
@@ -46,15 +47,15 @@
         <div class="row">
             <div class="col-md-4 mb-3">
                 <label for="stockMinimo" class="form-label">Stock Mínimo</label>
-                <input type="number" class="form-control" id="stockMinimo" th:field="*{stockMinimo}" min="0">
+                <input type="number" class="form-control" id="stockMinimo" th:field="*{stockMinimo}" min="0" step="1" required>
             </div>
             <div class="col-md-4 mb-3">
                 <label for="stockMaximo" class="form-label">Stock Máximo</label>
-                <input type="number" class="form-control" id="stockMaximo" th:field="*{stockMaximo}" min="0">
+                <input type="number" class="form-control" id="stockMaximo" th:field="*{stockMaximo}" min="0" step="1" required>
             </div>
             <div class="col-md-4 mb-3">
                 <label for="puntoReposicion" class="form-label">Punto de Reposición</label>
-                <input type="number" class="form-control" id="puntoReposicion" th:field="*{puntoReposicion}" min="0">
+                <input type="number" class="form-control" id="puntoReposicion" th:field="*{puntoReposicion}" min="0" step="1" required>
             </div>
         </div>
 
