--- a/src/main/resources/templates/libro-mayor-report.html
+++ b/src/main/resources/templates/libro-mayor-report.html
@@ -71,7 +71,9 @@
     </form>
 
     <div th:unless="${isPdf}">
-        <a th:href="@{/reportes/libro-mayor/pdf(fechaInicio=${fechaInicio}, fechaFin=${fechaFin}, cuentaId=${selectedCuentaId})}" class="btn btn-info mb-3">Imprimir a PDF</a>
+        <a th:href="@{/reportes/libro-mayor/pdf(fechaInicio=${fechaInicio}, fechaFin=${fechaFin}, cuentaId=${selectedCuentaId})}" class="btn btn-success mb-3">
+            <i class="bi bi-file-earmark-pdf"></i> Descargar en PDF
+        </a>
     </div>
 
     <div th:if="${reportePorCuenta != null and !reportePorCuenta.isEmpty()}">
