Feature: Página unificada para Orden de Compra con toggle
- Creado nueva página orden-compra-unified.html
- Implementado toggle para alternar entre Generar y Listado
- Eliminadas dos rutas separadas del navbar
- Navbar ahora muestra solo 'Orden de Compra' en Abastecimiento
- Mantiene toda la funcionalidad original en una única página

--- a/src/main/resources/templates/fragments/navbar.html
+++ b/src/main/resources/templates/fragments/navbar.html
@@ -41,8 +41,7 @@
                         <li><hr class="dropdown-divider"></li>
                         <li><a class="dropdown-item" th:href="@{/solicitudes-compra}">Solicitud De Compra</a></li>
                         <li><a class="dropdown-item" th:href="@{/presupuestos/pedidos}">Presupuesto</a></li>
-                        <li><a class="dropdown-item" th:href="@{/ordenes-compra}">Generar Orden De Compra</a></li>
-                        <li><a class="dropdown-item" th:href="@{/ordenes-compra/listado}">Listado de Órdenes de Compra</a></li>
+                        <li><a class="dropdown-item" th:href="@{/ordenes-compra}">Orden de Compra</a></li>
                         <li><a class="dropdown-item" th:href="@{/remitos}">Remitos</a></li>
                         <li><a class="dropdown-item" th:href="@{/facturas}">Facturas</a></li>
                     </ul>
