--- a/src/main/resources/templates/productos.html
+++ b/src/main/resources/templates/productos.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
+<html xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 <head>
     <title>Listado de Productos</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -11,8 +11,8 @@
     <h2>Listado de Productos</h2>
     <div class="d-flex justify-content-between mb-3">
         <div>
-            <a th:href="@{/categorias}" class="btn btn-outline-secondary btn-sm">📁 Categorías</a>
-            <a th:href="@{/almacenes}" class="btn btn-outline-secondary btn-sm ms-2">🏪 Almacenes</a>
+            <a sec:authorize="hasRole('ADMIN')" th:href="@{/categorias}" class="btn btn-outline-secondary btn-sm">📁 Categorías</a>
+            <a sec:authorize="hasRole('ADMIN')" th:href="@{/almacenes}" class="btn btn-outline-secondary btn-sm ms-2">🏪 Almacenes</a>
         </div>
         <div>
             <a th:href="@{/productos/nuevo}" class="btn btn-primary">+ Nuevo Producto</a>
